--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="card-grid">
       <div class="card">
-        <img src="./images/pic1.jpg" alt="image" class="card-image">
+        <img src="./images/pic1.jpg" alt="image" class="card-image" />
       </div>
       <div class="card">
-        <img src="./images/pic2.jpg" alt="image" class="card-image">
+        <img src="./images/pic2.jpg" alt="image" class="card-image" />
       </div>
       <div class="card">
-        <img src="./images/pic3.jpg" alt="image" class="card-image">
+        <img src="./images/pic3.jpg" alt="image" class="card-image" />
       </div>
       <div class="card">
-        <img src="./images/pic4.jpg" alt="image" class="card-image">
+        <img src="./images/pic4.jpg" alt="image" class="card-image" />
       </div>
       <div class="card">
-        <img src="./images/pic5.jpg" alt="image" class="card-image">
+        <img src="./images/pic5.jpg" alt="image" class="card-image" />
       </div>
       <div class="card">
-        <img src="./images/pic6.jpg" alt="image" class="card-image">
+        <img src="./images/pic6.jpg" alt="image" class="card-image" />
+      </div>
+      <div class="card">
+        <img src="./images/w.jpeg" alt="image" class="card-image" />
       </div>
     </div>
-</body>
+  </body>
 </html>
