--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="./images/pic1.jpg" alt="image" class="card-image">
       </div>
       <div class="card">
-        <img src="C:\Users\tanya\FOSS.jpg" alt="image" class="card-image">
+        <img src="./images/FOSS.jpg" alt="image" class="card-image">
       </div>
       <div class="card">
         <img src="./images/pic3.jpg" alt="image" class="card-image">
